--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <div id="title-screen"></div>
+    <div id="container">
+        <div id="title-screen"></div>
+        <div id="controls">
+            <input type="text" id="player-name" placeholder="Enter your name">
+            <button onclick="startGame()">ゲームスタート</button>
+        </div>
+    </div>
+    <script>
+        function startGame() {
+            const playerName = document.getElementById('player-name').value;
+            if (playerName) {
+                window.location.href = '/chooseMode.html';
+            } else {
+                alert('名前を入力してください！');
+            }
+        }
+    </script>
 </body>
 </html>
