--- a/public/chooseMode.html
+++ b/public/chooseMode.html
@@ -3,28 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ゲームモード選択</title>
+    <title>モード選択</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <div id="container">
-        <div id="choose-mode-screen">
-            <!-- モード選択のコンテンツをここに追加 -->
+        <div id="mode-selection">
             <h1>ゲームモード選択</h1>
-            <button onclick="startGame()">ソロモード</button>
-            <button onclick="startMultiplayer()">マルチプレイヤー</button>
+            <button id="solo-mode">ソロモード</button>
+            <button id="multi-player-mode">マルチプレイヤーモード</button>
+            <button id="rules">ルール</button>
         </div>
     </div>
     <script>
-        function startGame() {
-            // ソロモードの処理
-            window.location.href = 'solo.html'; // 仮のURL
-        }
+        document.getElementById('solo-mode').addEventListener('click', function() {
+            window.location.href = 'solo.html';
+        });
 
-        function startMultiplayer() {
-            // マルチプレイヤーの処理
-            window.location.href = 'multiplayer.html'; // 仮のURL
-        }
+        document.getElementById('multi-player-mode').addEventListener('click', function() {
+            window.location.href = 'multiplayer.html'; // このページが必要な場合の仮URL
+        });
+
+        document.getElementById('rules').addEventListener('click', function() {
+            window.location.href = 'rules.html'; // ルールページの仮URL
+        });
     </script>
 </body>
 </html>
