--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="title-screen"></div>
         <div id="controls">
-            <input type="text" id="player-name" placeholder="Enter your name">
+            <input type="text" id="player-name" placeholder="名前を入力">
             <button onclick="startGame()">ゲームスタート</button>
         </div>
     </div>
