正誤判定＆得点計算実装

--- a/public/solo.html
+++ b/public/solo.html
@@ -16,11 +16,11 @@
         <!-- 右側にオブジェクト画像を表示 -->
         <div id="objects-container">
             <!-- ここに5枚のオブジェクト画像が表示される -->
-            <img class="object-image" src="" alt="オブジェクト1">
-            <img class="object-image" src="" alt="オブジェクト2">
-            <img class="object-image" src="" alt="オブジェクト3">
-            <img class="object-image" src="" alt="オブジェクト4">
-            <img class="object-image" src="" alt="オブジェクト5">
+            <img class="object-image" src="" alt="オブジェクト1" data-key="object1">
+            <img class="object-image" src="" alt="オブジェクト2" data-key="object2">
+            <img class="object-image" src="" alt="オブジェクト3" data-key="object3">
+            <img class="object-image" src="" alt="オブジェクト4" data-key="object4">
+            <img class="object-image" src="" alt="オブジェクト5" data-key="object5">
         </div>
 
         <!-- プレイヤーの得点を表示 -->
