問題数表示

--- a/public/solo.html
+++ b/public/solo.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="container">
+        <!-- 左上に何問目かを表示 -->
+        <div id="question-number">問題: <span id="current-question">1</span></div>
+        
         <!-- 左側に問題画像を表示 -->
         <div id="question-container">
             <img id="question-image" src="" alt="問題画像">
