--- a/public/solo.html
+++ b/public/solo.html
@@ -10,7 +10,7 @@
     <div id="container">
         <!-- 左上に何問目かを表示 -->
         <div id="question-number">問題: <span id="current-question">1</span></div>
-        
+
         <!-- 左側に問題画像を表示 -->
         <div id="question-container">
             <img id="question-image" src="" alt="問題画像">
@@ -29,6 +29,11 @@
         <!-- プレイヤーの得点を表示 -->
         <div id="score-display">
             得点: <span id="score">0</span>
+        </div>
+
+        <!-- 左下にプレイヤー名を表示 -->
+        <div id="name-display">
+            プレイヤー名
         </div>
     </div>
     <script src="/solo.js"></script>
