判定結果表示

--- a/public/solo.html
+++ b/public/solo.html
@@ -31,10 +31,11 @@
             得点: <span id="score">0</span>
         </div>
 
+        <!-- 判定結果を表示するための要素 -->
+        <div id="result-display">判定結果</div>
+
         <!-- 左下にプレイヤー名を表示 -->
-        <div id="name-display">
-            プレイヤー名
-        </div>
+        <div id="name-display">プレイヤー名</div>
     </div>
     <script src="/solo.js"></script>
 </body>
