--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 <body>
     <div id="container">
         <div id="title-screen"></div>
+        <div id="title-display">
+            <h1>おばけ<br>キャッチ</h1>
+        </div>
         <div id="controls">
             <input type="text" id="player-name" placeholder="名前を入力">
             <button onclick="startGame()">ゲームスタート</button>
