--- a/public/result.html
+++ b/public/result.html
@@ -18,7 +18,7 @@
 
         <!-- モード選択へ戻るボタン -->
         <div id="return-button-container">
-            <button id="return-button">モード選択へ戻る</button>
+            <button id="return-button">ゲームモード選択へ戻る</button>
         </div>
     </div>
     <script src="/result.js"></script>
