全体的に視認性向上

--- a/public/chooseMode.html
+++ b/public/chooseMode.html
@@ -9,10 +9,12 @@
 <body>
     <div id="container">
         <div id="mode-selection">
-            <h1>ゲームモード選択</h1>
-            <button id="solo-mode">ソロモード</button>
-            <button id="multi-player-mode">マルチプレイヤーモード</button>
-            <button id="rules">ルール</button>
+            <div id="mode-selection-content">
+                <h1>ゲームモード選択</h1>
+                <button id="solo-mode">ソロモード</button>
+                <button id="multi-player-mode">マルチプレイヤーモード</button>
+                <button id="rules">ルール</button>
+            </div>
         </div>
         <!-- 左下にプレイヤー名を表示 -->
         <div id="name-display">
